--- a/public/css/store.css
+++ b/public/css/store.css
@@ -4,11 +4,11 @@ section {
   padding-bottom: 60px;
   display: flex;
   flex-direction: row;
-  margin-top: 10vh;
+  margin-top: 11vh;
 }
 
 .products4 {
-  flex: 73%;
+  flex: 75%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -16,7 +16,7 @@ section {
   float: right;
   height: 100%;
   overflow-y: scroll;
-  margin-top: 3vh;
+  margin-top: 5vh;
   border-bottom: 2px solid black;
 }
 
@@ -25,7 +25,7 @@ section {
 }
 
 .product {
-  flex: 23%;
+  flex: 20%;
   overflow: hidden;
   background: rgb(153 192 255);
   color: black;
@@ -38,8 +38,10 @@ section {
   align-items: center;
   justify-content: center;
   border-radius: 1.2rem;
-  margin: 0.5vh;
+  margin: 0.8vh;
   border: black 2px solid;
+  position: relative;
+  cursor: pointer;
 }
 
 .product img {
@@ -52,26 +54,31 @@ section {
 }
 
 .product:hover {
-  box-shadow: 5px 15px 23px rgb(255, 133, 255);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.479);
 }
 
 .product button {
+  position: absolute;
   font-size: 15px;
-  font-weight: bold;
-  border: 1.5px solid black;
-  border-radius: 5px;
+  bottom: 10px;
+  left: 50%;
+  width: 75%;
+  transform: translate(-50%, -5%);
+  padding: 4px;
+  border-radius: 10px;
+  border: 0;
+  transition: 300ms ease-in-out;
+  cursor: pointer;
 }
 
 .product button:hover {
-  font-size: 14px;
-  border: 2px solid black;
-  color: rgb(20, 16, 66);
-  background-color: rgb(82, 231, 254);
+  transform: translate(-47%, -10%);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .categories {
-  flex: 27%;
-  height: 75vh;
+  flex: 29%;
+  height: 50%;
   background-color: white;
   float: left;
   margin-top: 11.5vh;
@@ -93,34 +100,34 @@ section {
   justify-content: center;
   flex-direction: column;
 
-  >h1 {
-    font-size: 2.8em;
+  > h1 {
+    font-size: 2.3em;
     margin: 0 0 10px 0;
 
-    >i {
+    > i {
       margin-top: 23px;
       float: right;
     }
   }
 
-  >p {
+  > p {
     color: gray;
   }
 }
 
 #subcate {
-  height: 70%;
+  height: auto;
   width: 100%;
   padding: 5vh;
   display: flex;
   flex-direction: column;
   background-color: rgb(233, 230, 231);
 
-  >h2 {
+  > h2 {
     font-size: 2em;
   }
 
-  >.buttons {
+  > .buttons {
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -128,7 +135,7 @@ section {
     margin-top: 5px;
     height: 90%;
 
-    >button {
+    > button {
       height: 7vh;
       font-size: 1.2em;
     }
