--- a/views/homepage.html
+++ b/views/homepage.html
@@ -90,7 +90,7 @@
 
   <h1 id="dtt">
     Daw Thet Htar ၏ကိုယ်စားလှယ်ကြီးဖြစ်ပါသဖြင့် ယုံကြည်စိတ်ချစွာ
-    ဝယ်ယူလို့ရ​နေပါပြီ
+    ဝယ်ယူလို့ရ​နေပါပြီ။ <span>!!</span>
   </h1>
 
   <section class="toShop" id="toShop">
@@ -143,11 +143,14 @@
   <!-- https://respond.io/ -->
 
   <!-- https://respond.io/ -->
-  <div id="dialog-4" title="In Myanmar">
-    VPNခံခြင်းဖြင့် messenger support ရယူပါ
-    <br />
-    <br />
-    <img src="imgs/messenger.png" alt="" />
+  <div id="ui-dialog">
+    <div id="dialog-4" title="In Myanmar" style="top: 0 !important;">
+      VPNခံခြင်းဖြင့် messenger support ရယူပါ
+      <br />
+      <br />
+      <img src="imgs/messenger.png" alt="" />
+    </div>
+
   </div>
   <footer>
     <div class="footer1">
@@ -203,7 +206,6 @@
   </footer>
 
   <script src="js/navigation.js"></script>
-  <p class="noti">Buy NOW!</p>
 </body>
 
 </html>
