--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -10,12 +10,11 @@
 
 .mainpage {
   width: 80%;
-  height: 550px;
-  margin-top: 18vh;
+  height: 70vh;
+  margin-top: 20vh;
   margin-left: 10%;
   border-radius: 20px;
   margin-right: 15%;
-  overflow: hidden;
   display: flex;
   flex-direction: row;
 }
@@ -35,13 +34,14 @@
 #borderleft {
   margin-left: -34px;
   position: absolute;
-  border-left: 4px dashed rgb(9, 239, 189);
+  border-left: 4px dashed rgb(9, 212, 239);
   top: 10%;
-  height: 45vh;
+  height: 30vh;
 }
 
 .mainpage2 p {
-  padding-top: -15px;
+  padding: 7px;
+  border-radius: 0 20px 20px 20px;
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.397);
 }
@@ -55,13 +55,14 @@
   color: rgba(0, 136, 169, 1);
   font-size: 20.5px;
   font-family: "Fjalla One", sans-serif;
-  animation: shadowmove 5s infinite;
+  animation: shadowmove 6s infinite;
   overflow: hidden;
 }
 
 @keyframes shadowmove {
   70% {
-    text-shadow: 10px 10px 30px rgb(34, 123, 248);
+    color: black;
+    text-shadow: 0 18px 30px rgb(27, 255, 6);
   }
 }
 
@@ -82,11 +83,29 @@
 }
 
 #dtt {
-  font-size: 25px;
-  margin: 10vh 0 0 0;
+  font-size: 2.5em;
   text-align: center;
+  background-color: #ffea6c;
+  line-height: 10vh;
+  width: 80vw;
+  margin: 7vh 10vw;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#dtt span {
+  color: red;
+  background-color: white;
+  border-radius: 25px;
+  padding: 10px;
+  animation: fade 1000ms ease-in-out infinite;
 }
 
+@keyframes fade {
+  100% {
+    background-color: rgba(255, 255, 255, 0);
+    color: black;
+    font-size: 1.25em;
+  }
+}
 .toShop {
   width: 86%;
   height: 70vh;
@@ -195,6 +214,7 @@
   left: 50%;
   transform: translate(-50%);
   z-index: 1;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 1);
 }
 
 .box {
@@ -207,7 +227,7 @@
 
 .box1 {
   padding-top: 40px;
-  background: rgba(0, 162, 203, 0.7);
+  background: rgba(99, 224, 255, 0.699);
 }
 
 .box img {
@@ -218,18 +238,19 @@
 
 .box p,
 .box a {
-  padding: 10px;
+  padding: 10px 3vw;
   font-size: 2em;
   font-family: "Fjalla One", sans-serif;
   line-height: 1.6em;
   text-align: justify;
   font-weight: bold;
+  color: rgb(27, 25, 25);
 }
 
 .box a {
   text-decoration: none;
   padding: 1vh 2vh;
-  margin: 10px;
+  margin: 0 3vw;
   background-color: rgb(0, 200, 255);
   font-size: 2em;
   transition: 200ms ease-in-out;
