--- a/public/css/items.css
+++ b/public/css/items.css
@@ -1,22 +1,29 @@
 section {
-  width: 84%;
+  width: 80%;
   height: auto;
   background-color: rgb(201, 238, 246);
-  margin: 17vh 8%;
+  margin: 25vh 10%;
   display: flex;
   border: solid 4px black;
+  position: relative;
+  padding: 1.5vh 1.2vw;
+  padding-top: 6vh;
+  margin-bottom: 3vh;
 }
 
 #left {
   text-align: center;
   flex: 35%;
   margin-left: 5vh;
+  height: 55vh;
 }
 
 #left img {
-  width: 80%;
+  width: 75%;
+  height: 70%;
   margin: 10%;
   box-shadow: 25px 25px rgba(0, 0, 0, 0.6);
+  background-color: white;
 }
 
 #left p {
@@ -27,20 +34,25 @@ section {
   text-shadow: 3px 3px #000000;
   font-weight: 800;
 }
-
-#left h1 {
-  font-size: 2.5em;
-  margin-top: 2vh;
+#title {
+  position: absolute;
+  width: 70%;
+  text-align: center;
+  font-size: 2.2em;
+  z-index: 1;
+  border-bottom: 3px solid black;
+  margin: -6.5vh 11vw;
+  padding: 1vh;
+  white-space: nowrap;
 }
-
 #right {
   text-align: justify;
-  flex: 65%;
+  flex: 70%;
 }
 
 #right p {
-  font-size: 2em;
-  padding: 10% 10vh;
+  font-size: 1.65em;
+  padding: 7% 10vh;
   padding-bottom: 0;
 }
 
@@ -59,5 +71,4 @@ section {
 #backbutton button:hover {
   padding: 0.8vh;
   border: 3px solid aqua;
-
 }
