--- a/public/ordermail.ejs
+++ b/public/ordermail.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <%= product%> <%= phone%><%= amount%>
+    <%= product%> <%= phone%>
+    <br /><%= amount%>
   </body>
 </html>
