--- a/views/items.ejs
+++ b/views/items.ejs
@@ -76,7 +76,7 @@
     <section>
       <h1 id="title"><%= name %></h1>
       <div id="left">
-        <img src="/imgs/item_photos/<%= image %>" alt="" id="image" />
+        <img src="/imgs/item_photos/<%= image %>.jpg" alt="" id="image" />
         <p id="price"><%= price %></p>
       </div>
       <div id="right">
@@ -87,7 +87,7 @@
       <input
         type="hidden"
         name="referrer"
-        value="/items/<%= image%>"
+        value="/items/<%= image %>"
         id="referrer"
       />
       <input type="hidden" id="product" value="<%= name%>" name="product" />
@@ -168,6 +168,7 @@
           </li>
         </ul>
       </div>
+      <script></script>
       <div class="footer4">
         <h4>Copyright@ 2023-2024</h4>
       </div>
